# Axion

./: .gitignore  CMakeLists.txt  Matrix.hpp  README.md  UML.uxf
src/AxionGLFW/: CMakeLists.txt  Export.hpp
src/AxionGLFW/Window/: WindowGLFW.cpp  WindowGLFW.hpp
src/Core/: CMakeLists.txt  Export.hpp  Makefile
src/Core/Asset/: Asset.cpp  Asset.hpp  AssetHolder.hpp  AssetLoader.cpp  AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  AssetManager.ipp  AssetModule.cpp  AssetModule.hpp  AssetModule.ipp  AssetReference.hpp  Assets.cpp  Assets.hpp  JsonAttributes.cpp  JsonAttributes.hpp  Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  Package.cpp  Package.hpp  PackageManager.cpp  PackageManager.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  (+9 more)
src/Core/Asset/Asset/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Package.cpp  Package.hpp  Scene.cpp  Scene.hpp  Shader.cpp  (+3 more)
src/Core/Assets/: AssetHolder.hpp  AssetManager.cpp  AssetManager.hpp  AssetReference.hpp  Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  Package.cpp  Package.hpp  PackageManager.cpp  PackageManager.hpp  ResourceHolder.hpp  ResourceReference.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
src/Core/Builder/: AssetFactories.cpp  AssetFactories.hpp  AssetFactories.ipp  AssetFactory.hpp  AssetFactory.ipp  BuilderModule.hpp  ComponentFactories.cpp  ComponentFactories.hpp  ComponentFactories.ipp  ComponentFactory.hpp  ComponentFactory.ipp  FactoryRecorder.hpp  GameModeFactory.hpp  GameModeFactory.ipp  SystemFactories.cpp  SystemFactories.hpp  SystemFactories.ipp  SystemFactory.hpp  SystemFactory.ipp
src/Core/Context/: ContextModule.cpp  ContextModule.hpp  Engine.cpp  Engine.hpp  EngineContext.cpp  EngineContext.hpp  Game.cpp  Game.hpp  GameContext.cpp  GameContext.hpp  GameMode.hpp  GameState.hpp  Module.hpp
src/Core/CoreSystems/: NullRenderer.hpp  Renderer.hpp
src/Core/Entity/: Component.hpp  ComponentIterator.hpp  ComponentList.hpp  ComponentManager.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
src/Core/GUI/: GUI.cpp  GUI.hpp  GUILayout.cpp  GUILayout.hpp  GUIRectangle.cpp  GUIWidget.hpp  NullGUI.hpp  UIButton.hpp  UIComponent.hpp  UIRectangleComponent.hpp
src/Core/GUIRenderer/: GUIRenderer.hpp
src/Core/Input/: Axis.cpp  Axis.hpp  Button.cpp  Button.hpp  Gamepad.hpp  Input.cpp  Input.hpp  InputModule.cpp  InputModule.hpp  InputType.hpp  JoystickManager.hpp  Keyboard.hpp  KeyboardManager.cpp  KeyboardManager.hpp  Mouse.hpp  MouseManager.hpp  NullInput.cpp  NullInput.hpp  NullInputModule.hpp  NullJoystickManager.hpp  NullKeyboardManager.hpp  NullMouseManager.hpp
src/Core/Logger/: ConsoleLogger.cpp  ConsoleLogger.hpp  ConsoleLoggerModule.cpp  ConsoleLoggerModule.hpp  Logger.cpp  Logger.hpp  LoggerModule.cpp  LoggerModule.hpp  NullLogger.hpp  NullLoggerModule.hpp  ThreadSafeLoggerModule.cpp  ThreadSafeLoggerModule.hpp
src/Core/Math/: Math.cpp  Math.hpp  Matrix.hpp  Quaternion.hpp  Rect.hpp  Transform.cpp  Transform.hpp  Transform2D.cpp  Transform2D.hpp  Vector.hpp
src/Core/Plugin/: Plugin.cpp  Plugin.hpp
src/Core/Renderer/: CameraSettings.hpp  Material.hpp  MaterialSettings.hpp  NullRenderer.hpp  NullRendererModule.hpp  RenderMode.hpp  Renderer.cpp  Renderer.hpp  RendererCamera.hpp  RendererCameraParameters.hpp  RendererException.hpp  RendererMaterial.hpp  RendererMaterialParameters.hpp  RendererModule.cpp  RendererModule.hpp
src/Core/Scene/: SceneModule.cpp  SceneModule.hpp
src/Core/System/: MonothreadSystem.hpp  MultithreadSystem.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp
src/Core/Utility/: ChunkContainer.hpp  ChunkContainer.ipp  Color.cpp  Color.hpp  ConfigParser.cpp  ConfigParser.hpp  ForEachTuple.hpp  IndexVector.hpp  Json.hpp  JsonUtility.cpp  JsonUtility.hpp  LibraryLoader.cpp  LibraryLoader.hpp  LoadException.hpp  Macro.hpp  Memory.cpp  Memory.hpp  NonCopyable.hpp  Observer.hpp  Path.cpp  Path.hpp  Reference.cpp  Reference.hpp  Reference.ipp  ReferenceTracker.cpp  ReferenceTracker.hpp  ThreadPool.cpp  ThreadPool.hpp  Time.cpp  Time.hpp  TimeRecorder.cpp  TimeRecorder.hpp  Timer.cpp  Timer.hpp  Types.hpp  Vertex.hpp
src/Core/Window/: NullWindow.hpp  NullWindowModule.hpp  Window.cpp  Window.hpp  WindowModule.cpp  WindowModule.hpp
src/Core/World/: World.cpp  World.hpp
src/Core/builder/: asset_factory.hpp  asset_factory.ipp  builder_module.hpp  component_factory.hpp  componrent_factory.ipp  factory_recorder.hpp  gamemode_factory.hpp  gamemode_factory.ipp  system_factory.hpp  system_factory.ipp
src/Core/context/: context_module.cpp  context_module.hpp
src/Core/engine/: engine.cpp  engine.hpp  module.hpp
src/GLFW/: CMakeLists.txt
src/GLFW/Input/: InputGLFW.cpp  InputGLFW.hpp  InputModuleGLFW.cpp  InputModuleGLFW.hpp  KeyboardManagerGLFW.cpp  KeyboardManagerGLFW.hpp  WrapperInputGLFW.cpp  WrapperInputGLFW.hpp  WrapperInputModuleGLFW.cpp  WrapperInputModuleGLFW.hpp
src/GLFW/Loader/: Loader.cpp
src/GLFW/Window/: WindowGLFW.cpp  WindowGLFW.hpp  WindowModuleGLFW.cpp  WindowModuleGLFW.hpp  WrapperWindowGLFW.cpp  WrapperWindowGLFW.hpp  WrapperWindowModuleGLFW.cpp  WrapperWindowModuleGLFW.hpp
src/OpenGL/: CMakeLists.txt  Export.hpp
src/OpenGL/Loader/: Loader.cpp
src/OpenGL/Renderer/: CameraGL.cpp  CameraGL.hpp  GBuffer.cpp  GBuffer.hpp  MaterialGL.cpp  MaterialGL.hpp  MaterialUBO.cpp  MaterialUBO.hpp  MeshGL.cpp  MeshGL.hpp  RenderBuffer.cpp  RenderBuffer.hpp  RendererGL.cpp  RendererGL.hpp  RendererModuleGL.cpp  RendererModuleGL.hpp  ShaderGL.cpp  ShaderGL.hpp  StaticmeshGL.cpp  StaticmeshGL.hpp  TextureGL.cpp  TextureGL.hpp
src/RuntimeTest/: CMakeLists.txt  CustomSystem.hpp  main.cpp
(+419 files in other folders)
