cmake_minimum_required(VERSION 3.1.0)

PROJECT(Axion VERSION 0.0.1)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

#Enable debug
SET(CMAKE_BUILD_TYPE Debug)

#Using std=c++17
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_SUBDIRECTORY(src/Core)
ADD_SUBDIRECTORY(src/GLFW)
ADD_SUBDIRECTORY(src/OpenGL)
ADD_SUBDIRECTORY(src/RuntimeTest)

#A TESTER
#file(GLOB_RECURSE SRC **.cpp)
#file(GLOB_RECURSE HEADER **.h)